Fix layout issues for attach document info overlay.

--- a/assets/scss/create_form.scss
+++ b/assets/scss/create_form.scss
@@ -84,3 +84,15 @@
 	font-weight: bold;
 	color: oColorsGetPaletteColor('red');
 }
+
+.lr-label-with-info {
+	display: inline-block;
+}
+
+.lr-forms__attach-doc-info {
+	border-radius: 20px;
+	padding: 0;
+	line-height: 10px;
+	min-width: 20px;
+	min-height: 20px;
+}
